PDFBOX-4071: remove pre-jdk8 assumptions because we're on jdk8
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1867715 13f79535-47bb-0310-9956-ffa450edef68